--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -10,40 +10,47 @@ on:
 
 jobs:
   build:
-    name: Build and Test
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.9, 3.10, 3.11]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ['3.9', '3.10', '3.11']
     steps:
       - uses: actions/checkout@v4
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v3
+        uses: astral-sh/setup-uv@v6
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
+      - name: Install Python ${{ matrix.python-version }}
+        run: uv python install ${{ matrix.python-version }}
+
+      - name: Cache dependencies
+        uses: actions/cache@v3
         with:
-          python-version: ${{ matrix.python-version }}
+          path: ~/.cache/uv
+          key: ${{ runner.os }}-uv-${{ hashFiles('**/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-uv-
 
       - name: Install dependencies
-        run: |
-          uv pip install -e .
-          uv pip install -r requirements/requirements-hatch-test.py3.11.txt
+        run: uv pip install -e .[dev]
 
-      - name: Run unit tests
-        run: |
-          pytest tests/ --cov=src --cov-report=xml
+      - name: Lint with ruff
+        run: uv run ruff check src/
+
+      - name: Type check with mypy
+        run: uv run mypy src/
+
+      - name: Run tests
+        run: uv run pytest tests/ --cov=src --cov-report=xml
 
       - name: Build package
-        run: |
-          uv pip install build wheel
-          python -m build
+        run: uv build
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: dist-python-${{ matrix.python-version }}
+          name: dist-${{ matrix.os }}-py${{ matrix.python-version }}
           path: dist/
 
   publish:
