--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -32,8 +32,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-uv-
 
+      - name: Create virtual environment
+        run: uv venv
+
       - name: Install dependencies
-        run: uv pip install -e .[dev]
+        run: uv pip install -e .
+
+      - name: Install test dependencies
+        run: uv pip install -r requirements/requirements-hatch-test.py3.11.txt ruff mypy
 
       - name: Lint with ruff
         run: uv run ruff check src/
