--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,8 @@ jobs:
       - name: Install dependencies
         run: |
           uv pip install -e .
-          uv pip install ruff mypy
+          uv pip install ruff mypy types-PyYAML
+          uv pip install -r requirements/requirements-type-checking.txt
 
       - name: Lint with ruff
         run: uv run ruff check .
