--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,8 +100,6 @@ jobs:
           pattern: dist-*
           merge-multiple: true
           path: dist/
-      - name: "Push to PyPI"
-        uses: "pypa/gh-action-pypi-publish@release/v1"
-        with:
-          user: "__token__"
-          password: "${{ secrets.PYPI_API_TOKEN }}"
+
+      - name: Publish
+        run: uv publish -t ${{ secrets.PYPI_TOKEN }}
