--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,6 +100,9 @@ jobs:
           enable-cache: true
           cache-dependency-glob: uv.lock
 
+      - name: Generate uv.lock
+        run: uv lock
+
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
